Add description of recipe and ingredients in a bulleted list

--- a/recipes/eggs_and_toast.html
+++ b/recipes/eggs_and_toast.html
@@ -9,5 +9,15 @@
         <h1>Eggs and Toast</h1>
         <img src="../images/eggs_and_toast.jpg" alt="Tasty Eggs with Toast">
         <h2>Tasty Fluffy Eggs with Your Favorite Toasted Bread</h2>
+        <p>This recipe is for a good ol' reliable breakfast! However, it can be enjoyed any time of the day. Use any type of bread that you enjoy the most. I use rye for the extra flavor.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 eggs</li>
+            <li>1 slice of bread</li>
+            <li>1 tbsp olive oil</li>
+            <li>salt and pepper to taste</li>
+            <li>(optional) 2 tsp chopped parsley</li>
+        </ul>
     </body>
 </html>
