Add recipe steps

--- a/recipes/eggs_and_toast.html
+++ b/recipes/eggs_and_toast.html
@@ -18,6 +18,19 @@
             <li>1 tbsp olive oil</li>
             <li>salt and pepper to taste</li>
             <li>(optional) 2 tsp chopped parsley</li>
+            <li>(optional) 1 pat butter</li>
         </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Crack eggs into a bowl and stir to scramble</li>
+            <li>In a skillet, add olive oil on medium heat</li>
+            <li>Pour eggs into skillet with olive oil. Let them cook until edges start getting firm.</li>
+            <li>Add salt and pepper to eggs</li>
+            <li>While eggs begin to cook, begin toasting your eggs to desired crispiness</li>
+            <li>Start scraping under the edges of the eggs with a spatula. Flip when firm enough to stay intact.</li>
+            <li>Turn off heat and allow eggs to cook until desired firmness is reached</li>
+            <li>Move your eggs and toast onto plate. Garnish your eggs with parsley and butter your toast if you desire, and enjoy!</li>
+            </ol>
     </body>
 </html>
