Add link for recipe

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/eggs_and_toast.html">Eggs and Toast</a>
+        <p><a href="recipes/tex_mex_chicken_bowl.html">Tex Mex Chicken Bowl</a></p>
     </body>
 </html>
